--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -20,12 +20,14 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  V: ''
+  KEY_BUILD: ${{ secrets.SIGNING_KEY }}
   PRIVATE_KEY: ${{ secrets.SIGNING_KEY }}
   EXTRA_FEEDS: >-
     src-git|reticulum|https://github.com/gretel/feed-reticulum.git
   PACKAGES: |
     rns lxmf
+  V: ''
+
 jobs:
   build:
     name: ${{ matrix.arch }}-${{ matrix.release }}
@@ -42,6 +44,7 @@ jobs:
           - arm_arm1176jzf-s_vfp  # RPi Zero 1
           - mips_24kc             # Common in budget routers
           - x86_64                # Generic "PC"
+          - layerscape-armv7
 
     steps:
       - uses: actions/checkout@v4
@@ -97,13 +100,17 @@ jobs:
         run: |
           find ${{ github.workspace }}/artifacts/bin | sed -e "s/[^-][^\/]*\// |/g" -e "s/|\([^ ]\)/|-\1/"
 
-      - name: Upload artifacts
+      - name: Gather to artifact
+        id: artifact-upload-step
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.arch }}-${{ matrix.release }}-packages
           path: artifacts/bin/**/*.*pk
           retention-days: 7
           compression-level: 0
+
+      - name: Output artifact URL
+        run:  echo 'Artifact URL is ${{ steps.artifact-upload-step.outputs.artifact-url }}'
 
       # - name: Release
       #   uses: softprops/action-gh-release@v2
